<resources>
    <string name="app_name">Calculadora</string>
    <string name="btnOpBorrar_AC">AC</string>
    <string name="btnOpSigno_plus">+/-</string>
    <string name="btnOpPorciento_Porcentaje">%</string>
    <string name="btnOpDiv_Divisor">/</string>
    <string name="btnDigSiete_Siete">7</string>
    <string name="btnDigOcho_txt">8</string>
    <string name="btnDigNueve_txt">9</string>
    <string name="btnOpMulti_txt">X</string>
    <string name="txtViewExp_txt">0.0</string>
    <string name="btnDigCuatro_txt">4</string>
    <string name="btnDigCinco_txt">5</string>
    <string name="btnDigSeis_txt">6</string>
    <string name="btnOpResta_txt">-</string>
    <string name="btnDigUno_txt">1</string>
    <string name="btnDigDos_txt">2</string>
    <string name="btnDigTres_txt">3</string>
    <string name="btnOpSuma_txt">+</string>
    <string name="btnDigCero_txt">0</string>
    <string name="btnPunto_txt">.</string>
    <string name="btnOpIgual_txt">=</string>
    <string name="btnOpParentesisI_txt">(</string>
    <string name="btnOpParentesisD_txt">)</string>
    <string name="btnOpMC_txt">mc</string>
    <string name="btnOpMPlus_txt">m+</string>
    <string name="btnOpMMin_txt">m-</string>
    <string name="btnOpMR_txt">mr</string>
    <string name="btnOpND_txt">2nd</string>
    <string name="btnOpCuadrado_txt">x^2</string>
    <string name="btnOpCubo_txt">x^3</string>
    <string name="btnOpExponente_txt">x^y</string>
    <string name="btnOpExponencial_txt">e^x</string>
    <string name="btnOpPotenciaDiez_txt">10^x</string>
    <string name="btnOpUnoSobre_txt">1/x</string>
    <string name="btnOpRaizCuadrada_text">2√x</string>
    <string name="btnOpRaizCubica_text">3√x</string>
    <string name="btnOpRaizY_txt">y√x</string>
    <string name="btnOpLogaritmo_txt">ln</string>
    <string name="btnOpLogaritmoDiez_txt">log10</string>
    <string name="btnOpExponencialX_txt">X!</string>
    <string name="btnOpSin_txt">sin</string>
    <string name="btnOpCos_txt">cos</string>
    <string name="btnOpTan_txt">tan</string>
    <string name="btnNumeroE_txt">e</string>
    <string name="btnOpee_txt">EE</string>
    <string name="btnRadianes_txt">Rad</string>
    <string name="btnOpSinH_txt">sinh</string>
    <string name="btnOpTanH_txt">cosh</string>
    <string name="btnOpCosH_txt">tanh</string>
    <string name="btnNumeroPi_txt">π</string>
    <string name="btnRand_txt">Rand</string>
</resources>